copy across error class styles

--- a/index.css
+++ b/index.css
@@ -72,3 +72,20 @@ form {
            width: 10em;
            display: inline-block;
        }
+        /*
+            -------------------------------------------------------------------
+            Error states
+            -------------------------------------------------------------------
+            An error class to forms that fail your validation:
+            <p class='error'>
+                <label for='field'></label>
+                <input id='field' type='text' value='foo'>
+            </p>
+        */
+        .error > input,
+        .error > label {
+            color: red;
+        }
+        .error > input {
+            border-color: red;
+        }
